--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -42,7 +42,7 @@
 
     <application android:label="@string/calendar_storage"
                  android:allowBackup="false"
-                 android:icon="@drawable/app_icon"
+                 android:icon="@mipmap/ic_launcher"
                  android:usesCleartextTraffic="false">
 
         <provider android:name="CalendarProvider2" android:authorities="com.android.calendar"
